--- a/style.css
+++ b/style.css
@@ -381,14 +381,13 @@ footer {
 
 .payment-reminder,
 .order-disclaimer {
-  margin-top: 2rem;
-  font-size: 1rem;
-  opacity: 0.85;
+  font-size: 1.1rem;
+  line-height: 1.5;
   text-align: center;
   max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 2rem auto;
 }
+
 
 
 .payment-methods p {
