--- a/style.css
+++ b/style.css
@@ -376,7 +376,10 @@ footer {
   color: #bf94e4;
   font-size: 1.1rem;
 }
+
 .payment-reminder h3 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
+  color: #bf94e4;
 }
+
