--- a/style.css
+++ b/style.css
@@ -373,13 +373,13 @@ footer {
   border-radius: 15px;
   box-shadow: 0 0 12px rgba(104, 32, 188, 0.2);
   text-align: center;
-  color: #bf94e4;
+  color: #FFFFFF;
   font-size: 1.1rem;
 }
 
 .payment-reminder h3 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  color: #bf94e4;
+  color: #FFFFFF;
 }
 
