--- a/style.css
+++ b/style.css
@@ -52,7 +52,11 @@ nav ul li a {
 nav ul li a:hover {
   color: #832de2;
 }
-
+.logo-link {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
 /* Header */
 header {
   text-align: center;
